1:修改页面样式

--- a/src/main/resources/templates/auth-sign-in.html
+++ b/src/main/resources/templates/auth-sign-in.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Wilton-Cloud | 登录</title>
-      
+      <title>登入 | ViHacker</title>
+      <meta name="description" content="支持存储和分享文件，支持api加密上传，可以快速和项目对接">
       <!-- Favicon -->
       <link rel="shortcut icon" th:href="@{/assets/images/favicon.ico}" />
       
@@ -53,9 +53,9 @@
             <div class="row justify-content-center align-items-center height-self-center">
                <div class="col-md-5 col-sm-12 col-12 align-self-center">
                   <div class="sign-user_card">
-                     <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal light-logo" alt="logo">
-                     <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal darkmode-logo" alt="logo">
-                     <h5>WiltonCloud 文件分享系统</h5>
+                     <img th:src="@{/assets/images/Vihackerlogo-1.png}" class="img-fluid rounded-normal light-logo" style="height: 100px;" alt="logo">
+                     <img th:src="@{/assets/images/Vihackerlogo-1.png}" class="img-fluid rounded-normal darkmode-logo" style="height: 100px;" alt="logo">
+<!--                     <h5 style="color: #000">云文件分享系统</h5>-->
                      <h4 class="mb-3">登录</h4>
                      <form th:action="@{/login}" method="POST">
                         <div class="row">
