--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -7,8 +7,8 @@
         <div class="iq-navbar-logo d-flex align-items-center justify-content-between">
             <i class="ri-menu-line wrapper-menu"></i>
             <a href="index.html" class="header-logo">
-                <img src="assets/images/logo.png" class="img-fluid rounded-normal light-logo" alt="logo">
-                <img src="assets/images/logo.png" class="img-fluid rounded-normal darkmode-logo" alt="logo">
+                <img th:src="@{/assets/images/Vihackerlogo-1.png}" class="img-fluid rounded-normal light-logo" alt="logo">
+                <img th:src="@{/assets/images/Vihackerlogo-1.png}" class="img-fluid rounded-normal darkmode-logo" alt="logo">
             </a>
         </div>
         <div class="iq-search-bar device-search">
