--- a/src/main/resources/templates/page-recycle.html
+++ b/src/main/resources/templates/page-recycle.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Wilton-Cloud | 云文件分享系统</title>
+    <title>ViHacker | 云文件分享系统</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" th:href="@{/assets/images/favicon.ico}" />
@@ -80,22 +80,7 @@
 <!-- loader END -->
 <!-- Wrapper Start -->
 <div class="wrapper">
-
-    <div class="iq-sidebar  sidebar-default ">
-        <div class="iq-sidebar-logo d-flex align-items-center justify-content-between">
-            <a href="#" class="header-logo">
-                <img src="assets/images/logo.png" class="img-fluid rounded-normal light-logo" alt="logo">
-                <img src="assets/images/logo.png" class="img-fluid rounded-normal darkmode-logo" alt="logo">
-                <h5>WiltonCloud</h5>
-            </a>
-            <div class="iq-menu-bt-sidebar">
-                <i class="las la-bars wrapper-menu"></i>
-            </div>
-        </div>
-        <div class="data-scrollbar" data-scroll="1">
-            <div th:replace="common/nav::nav"></div>
-        </div>
-    </div>
+    <div th:replace="common/nav::nav"></div>
     <div class="iq-top-navbar" >
         <div th:replace="common/navbar::navbar"></div>
     </div>
