--- a/src/main/resources/templates/common/nav.html
+++ b/src/main/resources/templates/common/nav.html
@@ -14,8 +14,8 @@
 <div class="iq-sidebar  sidebar-default ">
     <div class="iq-sidebar-logo d-flex align-items-center justify-content-between">
         <a href="index.html" class="header-logo" style="height: 59px;margin-top: -9px;">
-            <img th:src="@{/assets/images/Vihackerlogo-1.png}" class="img-fluid rounded-normal light-logo" style="height: 65px; margin-left: 30px;margin-top: 5px;" alt="logo">
-            <img th:src="@{/assets/images/Vihackerlogo-1.png}" class="img-fluid rounded-normal darkmode-logo" style="height: 65px; margin-left: 30px;margin-top: 5px;" alt="logo">
+            <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal light-logo" style="height: 65px; margin-left: 30px;margin-top: 5px;" alt="logo">
+            <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal darkmode-logo" style="height: 65px; margin-left: 30px;margin-top: 5px;" alt="logo">
         </a>
         <div class="iq-menu-bt-sidebar">
             <i class="las la-bars wrapper-menu"></i>
