--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -18,7 +18,7 @@
                     <div class="btn-group">
                         <label class="dropdown-toggle searchbox" data-toggle="dropdown">
                             <input class="dropdown-toggle search-query text search-input" type="text"  placeholder="请输入你要搜索的内容..."><span class="search-replace"></span>
-                            <a class="search-link" href="#"><i class="ri-search-line"></i></a>
+                            <p class="search-link" href="#"><i class="ri-search-line"></i></p>
                             <span class="caret"><!--icon--></span>
                         </label>
                         <ul class="dropdown-menu">
