--- a/src/main/resources/templates/page-files.html
+++ b/src/main/resources/templates/page-files.html
@@ -67,6 +67,9 @@
             height: 0px;
             border: 0px;
         }
+        .breadcrumb-item+.breadcrumb-item:before {
+            margin-top: 0px;
+        }
 
     </style>
 </head>
