--- a/src/main/resources/templates/page-files.html
+++ b/src/main/resources/templates/page-files.html
@@ -164,7 +164,6 @@
                                                 <i class="ri-more-2-fill"></i>
                                             </span>
                                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton01">
-                                                <a class="dropdown-item" href="#"><i class="fa fa-share-square mr-2"></i>分享</a>
                                                 <a class="dropdown-item" href="#" th:onclick="deleteFolder([[${folder.id}]])"><i class="ri-delete-bin-6-fill mr-2"></i>删除</a>
                                                 <a class="dropdown-item change-folder" th:attr="data-id=${folder.id},data-name=${folder.folderName}" href="#"><i class="ri-pencil-fill mr-2"></i>重命名</a>
                                             </div>
@@ -200,7 +199,7 @@
                                                 <i class="ri-more-2-fill"></i>
                                             </span>
                                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton01">
-                                                <a class="dropdown-item" href="#"><i class="fa fa-share-square mr-2"></i>分享</a>
+                                                <a class="dropdown-item" href="#" th:onclick="toShare([[${file.id}]])"><i class="fa fa-share-square mr-2"></i>分享</a>
                                                 <a class="dropdown-item" href="#" th:onclick="deleteFile([[${file.id}]])"><i class="ri-delete-bin-6-fill mr-2"></i>删除</a>
                                                 <a class="dropdown-item change-file-name" th:attr="data-id=${file.id},data-name=${file.fileName}" href="#"><i class="ri-pencil-fill mr-2"></i>重命名</a>
                                                 <a class="dropdown-item" th:href="@{'/download/file?fileId=' + ${file.id}}"><i class="ri-file-download-fill mr-2"></i>下载</a>
@@ -476,7 +475,7 @@
         let parentId = $(jQuery).data("id");
         let folderName = $('#folderName').val();
         if(folderName == '' || folderName == null){
-            alert("文件夹不能为空!");
+            alert("文件夹不能为空");
             return
         }
         $.ajax({
@@ -485,6 +484,17 @@
             data:{folderName:folderName,parentId:parentId},
             success:function (result) {
                 initFolder(result.data.id)
+            }
+        });
+    }
+
+    function toShare(fileId){
+        $.confirm({
+            id: fileId,
+            content: '确定分享文件吗？',
+            confirm: function () {
+                var fileId = $('#jconfrimId').val();
+                console.log(fileId)
             }
         });
     }
