--- a/src/main/resources/templates/common/nav.html
+++ b/src/main/resources/templates/common/nav.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body th:fragment="nav">
 <link rel="stylesheet" th:href="@{/assets/css/common.css}">
 <style>
@@ -14,7 +14,7 @@
 </style>
 <div class="iq-sidebar  sidebar-default ">
     <div class="iq-sidebar-logo d-flex align-items-center justify-content-between">
-        <a href="index.html" class="header-logo" style="height: 59px;margin-top: -9px;">
+        <a href="/" class="header-logo" style="height: 59px;margin-top: -9px;">
             <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal light-logo" style="height: 65px; margin-left: 30px;margin-top: 5px;" alt="logo">
             <img th:src="@{/assets/images/logo.png}" class="img-fluid rounded-normal darkmode-logo" style="height: 65px; margin-left: 30px;margin-top: 5px;" alt="logo">
         </a>
@@ -67,7 +67,7 @@
                     <ul id="page-recycle" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
                     </ul>
                 </li>
-                <li class="" sec:authorize="hasRole('manage:view')" th:classappend="${cid == 10014} ? 'active' : '' ">
+                <li class="" sec:authorize="hasAnyAuthority('manage:view')" th:classappend="${cid == 10014} ? 'active' : '' ">
                     <a th:href="@{/admin?cid == 10014}" class="">
                         <i class="fa fa-user mr-1"></i><span>用户管理</span>
                     </a>
@@ -92,8 +92,14 @@
 <script type="text/javascript" th:inline="javascript">
     var cid = [[${cid}]];
     var path = getUrlAndPort();
-    setUrl(path + "?cid=" + cid);
-    getFreeStorage();
+    if(path.indexOf('/s/') >= 0){
+        $('.data-scrollbar').addClass("hide");
+        $('.iq-sidebar').css('height','auto');
+    }else{
+        setUrl(path + "?cid=" + cid);
+        getFreeStorage();
+    }
+
     /**
      * @description 设置url
      */
