--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -31,7 +31,9 @@
                 </div>
             </form>
         </div>
-
+        <div class="col-lg-5 col-md-3 col-sm-3" style="text-align: end;">
+            <a href="/resources">资源中心</a>
+        </div>
         <div class="d-flex align-items-center">
             <div class="change-mode">
                 <div class="custom-control custom-switch custom-switch-icon custom-control-inline">
@@ -63,9 +65,9 @@
                             </form>
                         </div>
                     </li>
-<!--                    <li class="nav-item nav-icon" sec:authorize="!isAuthenticated()">-->
-<!--                        <h5>登录</h5>-->
-<!--                    </li>-->
+                    <li class="nav-item nav-icon" sec:authorize="!isAuthenticated()">
+                        <a href="/toLogin" style="font-size: 15px;">登录</a>
+                    </li>
                     <li class="nav-item nav-icon dropdown" sec:authorize="isAuthenticated()">
                         <a href="#" class="search-toggle dropdown-toggle" id="dropdownMenuButton02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                             <i class="ri-settings-3-line"></i>
